--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./odin-recipes/roast-beef-roll-ups.html" rel="noopener noreferrer"
-      >Roast Beef Horseradish Roll-Ups</a
-    >
+    <ul>
+      <li>
+        <a
+          href="./odin-recipes/roast-beef-roll-ups.html"
+          rel="noopener noreferrer"
+          >Roast Beef Horseradish Roll-Ups</a
+        >
+      </li>
+      <li>
+        <a
+          href="./odin-recipes/saigon-noodle-salad.html"
+          rel="noopener noreferrer"
+          >Saigon Noodle Salad</a
+        >
+      </li>
+    </ul>
   </body>
 </html>
