--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="./styles.css">
     <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="recipes">
       <li>
         <a
           href="./odin-recipes/roast-beef-roll-ups.html"
