--- a/odin-recipes/saigon-noodle-salad.html
+++ b/odin-recipes/saigon-noodle-salad.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Saigon Noodle Salad</title>
   </head>
   <body>
     <h1>Saigon Noodle Salad</h1>
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1259511.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-      alt="Saigon noodle salad"
+      alt="Saigon noodle salad" height="auto" width="500"
     />
     <h2>Description</h2>
     <p>
@@ -18,7 +19,7 @@
       shrimp.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>¼ cup water, or more to taste</li>
       <li>3 tablespoons lime juice</li>
       <li>3 tablespoons fish sauce</li>
@@ -28,7 +29,7 @@
       <li>½ teaspoon Sriracha chile sauce</li>
     </ul>
     <h2>Directions</h2>
-    <ol>
+    <ol class="directions">
       <li>
         Whisk water, lime juice, fish sauce, brown sugar, garlic, ginger, and
         Sriracha together in a bowl until the sugar is dissolved.
