--- a/odin-recipes/tuna-macaroni-salad.html
+++ b/odin-recipes/tuna-macaroni-salad.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Tuna Macaroni Salad</title>
   </head>
   <body>
     <h1>Tuna Macaroni Salad</h1>
     <img
       src="https://www.allrecipes.com/thmb/sXvCPNr6s0jYrtgFX4RgjvQyZRY=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/70208_AmeliasTunaMacaroniSalad_ddmfs_4x3_2351-3ed4fab787fe497a8464674df8a592ad.jpg"
-      alt="Tuna Macaroni Salad"
+      alt="Tuna Macaroni Salad" height="auto" width="500"
     />
     <h2>Description</h2>
     <p>
@@ -18,7 +19,7 @@
       comfort food when the weather is warm.
     </p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>1 (12 ounce) package elbow macaroni</li>
       <li>1 (10 ounce) can baby peas, drained</li>
       <li>2 stalks celery, chopped</li>
@@ -31,7 +32,7 @@
       <li>1 pinch paprika, for garnish</li>
     </ul>
     <h2>Directions</h2>
-    <ol>
+    <ol class="directions">
       <li>
         Bring a large pot of lightly salted water to a boil. Cook elbow macaroni
         in boiling water, stirring occasionally, until tender yet firm to the
