--- a/odin-recipes/roast-beef-roll-ups.html
+++ b/odin-recipes/roast-beef-roll-ups.html
@@ -3,18 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../styles.css">
     <title>Roast Beef Horseradish Roll-Ups</title>
   </head>
   <body>
     <h1>Roast Beef Horseradish Roll-Ups</h1>
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F64190.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-      alt="Roast Beef roll-ups"
+      alt="Roast Beef roll-ups" height="auto" width="500"
     />
     <h2>Description</h2>
     <p>Simple to make for daily lunches or party fare.</p>
     <h2>Ingredients</h2>
-    <ul>
+    <ul class="ingredients">
       <li>2 (8 ounce) packages fat-free cream cheese, softened</li>
       <li>3 ½ tablespoons prepared horseradish</li>
       <li>3 tablespoons Dijon-style mustard</li>
@@ -24,7 +25,7 @@
       <li>8 ounces shredded Cheddar cheese</li>
     </ul>
     <h2>Directions</h2>
-    <ol>
+    <ol class="directions">
       <li>
         Beat the cream cheese, horseradish, and mustard together in a bowl until
         well blended.
