Update CSS layout
Center recipe and ingredients lists, round images.

--- a/index.html
+++ b/index.html
@@ -2,27 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./styles.css">
+    <link rel="stylesheet" href="./styles.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul class="recipes">
-      <li>
-        <a
-          href="./odin-recipes/roast-beef-roll-ups.html"
-          rel="noopener noreferrer"
-          >Roast Beef Horseradish Roll-Ups</a
-        >
-      </li>
-      <li>
-        <a
-          href="./odin-recipes/saigon-noodle-salad.html"
-          rel="noopener noreferrer"
-          >Saigon Noodle Salad</a
-        >
-      </li>
-      <li><a href="./odin-recipes/tuna-macaroni-salad.html" rel="noopener noreferrer">Tuna Macaroni Salad</a></li>
-    </ul>
+    <div class="list">
+      <ul class="recipes">
+        <li>
+          <a
+            href="./odin-recipes/roast-beef-roll-ups.html"
+            rel="noopener noreferrer"
+            >Roast Beef Horseradish Roll-Ups</a
+          >
+        </li>
+        <li>
+          <a
+            href="./odin-recipes/saigon-noodle-salad.html"
+            rel="noopener noreferrer"
+            >Saigon Noodle Salad</a
+          >
+        </li>
+        <li>
+          <a
+            href="./odin-recipes/tuna-macaroni-salad.html"
+            rel="noopener noreferrer"
+            >Tuna Macaroni Salad</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
