--- a/odin-recipes/saigon-noodle-salad.html
+++ b/odin-recipes/saigon-noodle-salad.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="../styles.css" />
     <title>Saigon Noodle Salad</title>
   </head>
   <body>
     <h1>Saigon Noodle Salad</h1>
     <img
       src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F1259511.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
-      alt="Saigon noodle salad" height="auto" width="500"
+      alt="Saigon noodle salad"
+      width="500"
     />
     <h2>Description</h2>
     <p>
